[tool.poetry]
name = "street-bot-server"
version = "0.1.0"
description = ""
authors = ["chezbgone <chezbgone@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
hypercorn = "^0.17.3"
quart = "^0.19.8"
redis = "^5.2.0"
common = {path = "../common"}
discord = "^2.3.2"
requests = "^2.32.3"
boto3 = "^1.35.56"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
boto3-stubs = {extras = ["dynamodb"], version = "^1.35.56"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
